--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
 	padding: 0;
 }
 
+body{
+	height: 100vh;
+	overflow: hidden;
+
+}
+
 
 li{
 	list-style-type: none;
@@ -19,17 +25,19 @@ li h2{
 
 li p,li button{
 	float: left;
+	padding: 10px;
 }
 
 .image{
 	width:100%;
 	height: 80%;
 	border-bottom: 3px solid #000;
+	background-color: #cd8b68;
 	overflow: hidden;
 }
 
 li img{
-	height: 100%;
+	width: 100%;
 }
 
 #square{
@@ -38,3 +46,19 @@ li img{
 	padding: 10px;
 
 }
+
+.pre{
+	z-index: 10;
+	background-color: red;
+	position: fixed;
+	bottom: 0;
+}
+
+
+
+
+
+
+
+
+
