--- a/style.css
+++ b/style.css
@@ -15,20 +15,25 @@ body{
 }
 
 .top{
-	padding: 30px 10%;
 	height: 100%;
+	width: 100%;
 	overflow: hidden;
+	position: relative;
 }
 
 li{
+	position: absolute;
 	list-style-type: none;
 	background-color: #fff;
 	height: 90%;
+	width: 70%;
+	top: 5%;
+	right: 15%;
 	overflow: hidden;
-	border-radius: 15px;
-	margin-bottom: 100px;
+	border-radius: 15px;	
 /*	border:solid 2px #000;*/
 	box-shadow:  2px 5px 5px #000;
+
 }
 
 li h2{
@@ -38,7 +43,7 @@ li h2{
 	margin-left: 20px;
 	margin-top: 10px;
 	font-weight: normal;
-	font-size: 20px;
+	font-size: 150%;
 }
 
 li #login{
@@ -62,6 +67,15 @@ li p,li button{
 
 li img{
 	height: 100%;
+}
+
+#drag{
+	width: 200px;
+	height: 200px;
+	border-radius: 50%;
+	border:3px solid #000;
+	background-color: rgba(255,255,255,0.8);
+	position: absolute;
 }
 
 form{
