--- a/style.css
+++ b/style.css
@@ -41,9 +41,9 @@ li h2{
 	height: 20%;
 	float: left;
 	margin-left: 20px;
-	margin-top: 10px;
+	margin-top: 5px;
 	font-weight: normal;
-	font-size: 150%;
+	font-size: 20px;
 }
 
 li #login{
@@ -70,8 +70,8 @@ li img{
 }
 
 #drag{
-	width: 200px;
-	height: 200px;
+	width: 70px;
+	height: 70px;
 	border-radius: 50%;
 	border:3px solid #000;
 	background-color: rgba(255,255,255,0.8);
