--- a/style.css
+++ b/style.css
@@ -69,13 +69,49 @@ li img{
 	height: 100%;
 }
 
+.like{
+	width: 100%;
+	height: 100%;
+	right: -100%;
+	background-color: #000;
+	position: absolute;
+	text-align: center;
+}
+
+.nope{
+	width: 100%;
+	height: 100%;
+	left: -100%;
+	background-color: red;
+	position: absolute;
+}
+
 #drag{
 	width: 70px;
 	height: 70px;
 	border-radius: 50%;
 	border:3px solid #000;
-	background-color: rgba(255,255,255,0.8);
+	background-color: rgba(255,255,255,0.9);
 	position: absolute;
+	text-align: center;
+	cursor: pointer;
+	box-shadow: 2px 4px 10px #000;
+	/*margin-top:50%; */
+}
+
+#drag2{
+	width: 70px;
+	height: 70px;
+	border-radius: 50%;
+	border:3px solid #000;
+	background-color: rgba(0,0,0,0.7);
+	position: absolute;
+	right: 0;
+	text-align: center;
+	cursor: pointer;
+	box-shadow: 2px 4px 10px #000;
+	color: #fff;
+	/*margin-top:50%; */
 }
 
 form{
