--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
 	position: relative;
 }
 
-li{
+.user{
 	position: absolute;
 	list-style-type: none;
 	background-color: #fff;
@@ -36,7 +36,7 @@ li{
 
 }
 
-li h2{
+.user h2{
 	display: inline-block;
 	height: 20%;
 	float: left;
@@ -46,13 +46,13 @@ li h2{
 	font-size: 20px;
 }
 
-li #login{
+.user #login{
 	color: rgba(0,0,0,0.4);
 	font-size: 12px;
 	margin-top: 10px;
 }
 
-li p,li button{
+.user p,li button{
 	float: left;
 	padding: 10px;
 }
@@ -73,17 +73,78 @@ li img{
 	width: 100%;
 	height: 100%;
 	right: -100%;
-	background-color: #000;
+	background-color:#cd8b68;
 	position: absolute;
 	text-align: center;
+	padding-top: 30px;
+	overflow: scroll;
+	color: #000;
+}
+
+.like li{
+	list-style-type: none;
+	background-color: #fff;
+	height: 50%;
+	width: 40%;
+	float: left;
+	overflow: hidden;
+	color: #000;
+	border-radius: 5%;
+	margin-bottom: 30px;
+	margin-left: 30px;
+	box-shadow: 2px 3px 3px #000;
+}
+
+.like h2{
+	font-size: 100%;
+}
+
+.image2{
+	width:100%;
+	height: 90%;
+/*	border-bottom: 3px solid #000;*/
+	background-color: #cd8b68;
+	overflow: hidden;
 }
 
 .nope{
 	width: 100%;
 	height: 100%;
 	left: -100%;
-	background-color: red;
+	background-color: #cd8b68;
 	position: absolute;
+	text-align: center;
+	padding-top: 30px;
+	overflow: scroll;
+	color: #000;
+}
+
+.nope li{
+	list-style-type: none;
+	background-color: #fff;
+	height: 50%;
+	width: 40%;
+	float: left;
+	overflow: hidden;
+	color: #000;
+	border-radius: 5%;
+	margin-bottom: 30px;
+	margin-left: 30px;
+	box-shadow: 2px 3px 3px #000;
+}
+
+.nope h2{
+	font-size: 100%;
+}
+
+h1{
+	border:2px solid #000;
+	padding: 10px;
+	font-weight: normal;
+	width: 70%;
+	margin: 0 auto;
+	letter-spacing: 0.2em;
+	margin-bottom: 20px;
 }
 
 #drag{
